squash merge degroff/netty_shrink